--- a/index.html
+++ b/index.html
@@ -5,5 +5,66 @@
     <title>Landing page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <h2>Header Logo</h2>
+      <div class="links">
+        <a>header link one</a>
+        <a>header link two</a>
+        <a>header link three</a>
+      </div>
+    </div>
+    <div class="content">
+      <div class="section-1">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title.
+          It's smaller font and the color is lower contrast
+        </p>
+        <button>Sign up</button>
+        <div class="image">this is a placeholder for an image</div>
+      </div>
+      <div class="section-2">
+        <h1>Some random information.</h1>
+        <div class="cards">
+          <div class="card">
+            <div class="card-img"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card-img"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card-img"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card-img"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+        </div>
+      </div>
+      <div class="section-3">
+        <p>
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <span>-Thor, God of Thunder</span>
+      </div>
+      <div class="section-4">
+        <div class="box">
+          <p>Call to action! It's time!</p>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+          <button>Sign up</button>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>Copyright The Odin Project 2021</p>
+    </div>
+  </body>
 </html>
