Fix hero section
Changing class name from "header" to "hero".
Putting the section in the right place.
Putting background color.

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="header">
-      <h2>Header Logo</h2>
-      <div class="links">
-        <a>header link one</a>
-        <a>header link two</a>
-        <a>header link three</a>
+    <div class="hero">
+      <div class="hero-content-1">
+        <h2 class="header-logo">Header Logo</h2>
+        <div class="links">
+          <a>header link one</a>
+          <a>header link two</a>
+          <a>header link three</a>
+        </div>
       </div>
-    </div>
-    <div class="content">
-      <div class="section-1">
+      <div class="hero-content-2">
         <h1>This website is awesome</h1>
         <p>
           This website has some subtext that goes here under the main title.
@@ -24,6 +24,8 @@
         <button>Sign up</button>
         <div class="image">this is a placeholder for an image</div>
       </div>
+    </div>
+    <div class="content">
       <div class="section-2">
         <h1>Some random information.</h1>
         <div class="cards">
