Pick the right fonts and colors for hero section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="hero">
       <div class="hero-content-1">
-        <h2 class="header-logo">Header Logo</h2>
+        <p class="header-logo">Header Logo</p>
         <div class="links">
           <a>header link one</a>
           <a>header link two</a>
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="hero-content-2">
-        <h1>This website is awesome</h1>
+        <p class="hero-main-text">This website is awesome</p>
         <p>
           This website has some subtext that goes here under the main title.
           It's smaller font and the color is lower contrast
