Adding more style to the hero section

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         </div>
       </div>
       <div class="hero-content-2">
-        <p class="hero-main-text">This website is awesome</p>
-        <p>
-          This website has some subtext that goes here under the main title.
-          It's smaller font and the color is lower contrast
-        </p>
-        <button>Sign up</button>
+        <div class="hero-content-sub">
+          <p class="hero-main-text">This website is awesome</p>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
         <div class="image">this is a placeholder for an image</div>
       </div>
     </div>
