Replace the placeholder with the image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </p>
           <button>Sign up</button>
         </div>
-        <div class="image">this is a placeholder for an image</div>
+        <div class="image"><img src="images/max-L7NpUSFYVjM-unsplash.jpg"></div>
       </div>
     </div>
     <div class="content">
