Add style to section 1 header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="content">
       <div class="section-1">
-        <h1>Some random information.</h1>
+        <p class="section-1-header">Some random information.</p>
         <div class="cards">
           <div class="card">
             <div class="card-img"></div>
