Add images to section 1 Put white background
Fixing images width and height.

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <p class="section-1-header">Some random information.</p>
         <div class="cards">
           <div class="card">
-            <div class="card-img"></div>
+            <div class="card-img"><img src="images/anthony-tran-dPgK_HnaY0w-unsplash.jpg" class="img-card"></div>
             <p>this is some subtext under an illustration or image</p>
           </div>
           <div class="card">
-            <div class="card-img"></div>
+            <div class="card-img"><img src="images/claudia-ramirez-lWN68NDKWPM-unsplash.jpg" class="img-card"></div>
             <p>this is some subtext under an illustration or image</p>
           </div>
           <div class="card">
-            <div class="card-img"></div>
+            <div class="card-img"><img src="images/igor-starkov-Hea3QOjilSs-unsplash.jpg" class="img-card"></div>
             <p>this is some subtext under an illustration or image</p>
           </div>
           <div class="card">
-            <div class="card-img"></div>
+            <div class="card-img"><img src="images/michael-starkie-LM9mpwC3vWg-unsplash.jpg" class="img-card"></div>
             <p>this is some subtext under an illustration or image</p>
           </div>
         </div>
