Change text of section 1

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
         <div class="cards">
           <div class="card">
             <div class="card-img"><img src="images/anthony-tran-dPgK_HnaY0w-unsplash.jpg" class="img-card"></div>
-            <p>this is some subtext under an illustration or image</p>
+            <p>Beautiful.</p>
           </div>
           <div class="card">
             <div class="card-img"><img src="images/claudia-ramirez-lWN68NDKWPM-unsplash.jpg" class="img-card"></div>
-            <p>this is some subtext under an illustration or image</p>
+            <p>Stunning.</p>
           </div>
           <div class="card">
             <div class="card-img"><img src="images/igor-starkov-Hea3QOjilSs-unsplash.jpg" class="img-card"></div>
-            <p>this is some subtext under an illustration or image</p>
+            <p>Sexy</p>
           </div>
           <div class="card">
             <div class="card-img"><img src="images/michael-starkie-LM9mpwC3vWg-unsplash.jpg" class="img-card"></div>
-            <p>this is some subtext under an illustration or image</p>
+            <p>Hot.</p>
           </div>
         </div>
       </div>
