Add the right style to section 2

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           </p>
           <button>Sign up</button>
         </div>
-        <div class="image"><img src="images/max-L7NpUSFYVjM-unsplash.jpg"></div>
+        <div class="image">
+          <img src="images/max-L7NpUSFYVjM-unsplash.jpg" />
+        </div>
       </div>
     </div>
     <div class="content">
@@ -32,30 +34,52 @@
         <p class="section-1-header">Some random information.</p>
         <div class="cards">
           <div class="card">
-            <div class="card-img"><img src="images/anthony-tran-dPgK_HnaY0w-unsplash.jpg" class="img-card"></div>
+            <div class="card-img">
+              <img
+                src="images/anthony-tran-dPgK_HnaY0w-unsplash.jpg"
+                class="img-card"
+              />
+            </div>
             <p>Beautiful.</p>
           </div>
           <div class="card">
-            <div class="card-img"><img src="images/claudia-ramirez-lWN68NDKWPM-unsplash.jpg" class="img-card"></div>
+            <div class="card-img">
+              <img
+                src="images/claudia-ramirez-lWN68NDKWPM-unsplash.jpg"
+                class="img-card"
+              />
+            </div>
             <p>Stunning.</p>
           </div>
           <div class="card">
-            <div class="card-img"><img src="images/igor-starkov-Hea3QOjilSs-unsplash.jpg" class="img-card"></div>
+            <div class="card-img">
+              <img
+                src="images/igor-starkov-Hea3QOjilSs-unsplash.jpg"
+                class="img-card"
+              />
+            </div>
             <p>Sexy</p>
           </div>
           <div class="card">
-            <div class="card-img"><img src="images/michael-starkie-LM9mpwC3vWg-unsplash.jpg" class="img-card"></div>
+            <div class="card-img">
+              <img
+                src="images/michael-starkie-LM9mpwC3vWg-unsplash.jpg"
+                class="img-card"
+              />
+            </div>
             <p>Hot.</p>
           </div>
         </div>
       </div>
       <div class="section-2">
-        <p>
-          This is an inspiring quote, or a testimonial from a customer. Maybe
-          it's just filling up space or maybe people will actually read it. Who
-          knows? All I know is that it looks nice.
-        </p>
-        <span>-Thor, God of Thunder</span>
+        <div class="section-2-container">
+          <p class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </p>
+          <span class="author">-Thor, God of Thunder</span>
+        </div>
       </div>
       <div class="section-3">
         <div class="box">
