Align section 3 Add style to the box

--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
       </div>
       <div class="section-3">
         <div class="box">
-          <p>Call to action! It's time!</p>
-          <p>
-            Sign up for our product by clicking that button right over there!
-          </p>
+          <div class="box-text">
+            <p>Call to action! It's time!</p>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
           <button>Sign up</button>
         </div>
       </div>
