--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="section-3">
         <div class="box">
           <div class="box-text">
-            <p>Call to action! It's time!</p>
+            <p class="action">Call to action! It's time!</p>
             <p>
               Sign up for our product by clicking that button right over there!
             </p>
